--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -11,5 +11,28 @@ jobs:
      say-hello:
         runs-on: ubuntu-latest
         steps:
-            - run: echo "Hello, Github Actions!"
-       
+            - name: Print Hello Git/Actions
+              run: echo "Hello, Github Actions!"
+
+     # Job to build and test our C code
+     build-and-test:
+         needs: [say-hello]
+         runs-on: ubuntu-latest
+         steps:
+            
+            
+            # Use github.com/actions/checkout to check out this repo
+            - name: Check out this repo 
+              uses: actions/checkout@v3
+              
+            # Install the necessary packages 
+            - name: Install dependecies 
+              run: sudo apt install -y build-essential python3
+              
+            # See where we are in the VM
+            - name: Print current directory
+              run: pwd
+            
+            # Run our test
+            - name: Run the script to test C code
+              run: python3 test.py
